--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "init with symofny, webpack and bootstrap",
+  "name": "symofny-webpack-bootstrap",
   "description": "",
   "version": "1.0.0",
   "devDependencies": {
@@ -14,7 +14,8 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4"
   },
-  "author": "Agustin Dominguez",
+  "author": "Mark Pundsack",
+  "contributors": [],
   "license": "MIT"
 }
 
