--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4"
   },
-  "author": "Mark Pundsack",
+  "author": "Agustin Domiguez",
   "contributors": [],
   "license": "MIT"
 }
